--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,9 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle.forge'
 
 
-version = "1.0"
+version = ""
 group= "com.flemmli97.mobbattle" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "Mob Battle Mod 2.2.3 [1.10.2]"
+archivesBaseName = "Mob Battle Mod 2.2.4 [1.10.2]"
 
 sourceCompatibility = targetCompatibility = "1.8" // Need this here so eclipse task generates correctly.
 compileJava {
