--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 
 version = ""
 group= "com.flemmli97.mobbattle" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "Mob Battle Mod 2.2.4 [1.10.2]"
+archivesBaseName = "MobBattleMo-2.2.5[1.10.2]"
 
 sourceCompatibility = targetCompatibility = "1.8" // Need this here so eclipse task generates correctly.
 compileJava {
