--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,9 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = ""
+version = "1.11.2-2.2.5"
 group = "com.flemmli97.mobbattle"
-archivesBaseName = "MobBattleMod-2.2.5[1.11.2]"
+archivesBaseName = "MobBattleMod"
 
 sourceCompatibility = targetCompatibility = "1.8" // Need this here so eclipse task generates correctly.
 compileJava {
