--- a/build.gradle
+++ b/build.gradle
@@ -11,33 +11,44 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = "1.12.2-2.3.2"
+version = "${mcversion}-${modversion}"
 group = "com.flemmli97.mobbattle"
 archivesBaseName = "MobBattleMod"
 
-sourceCompatibility = targetCompatibility = '1.8' 
+sourceCompatibility = targetCompatibility = '1.8'
 compileJava {
     sourceCompatibility = targetCompatibility = '1.8'
 }
 
 minecraft {
-    version = "1.12.2-14.23.4.2750"
+    version = "${mcversion}-${forge_version}"
     runDir = "run"
-    mappings = "snapshot_20171003"
-    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+
+    mappings = mcp_mapping
+    makeObfSourceJar = false
+    replace '${@VERSION}', modversion
+    replaceIn versionfile
 }
 
 repositories {
-    	maven {
-        name = "CurseForge"
-        url = "https://minecraft.curseforge.com/api/maven/"
+    maven {
+      name = "CurseForge"
+      url = "https://minecraft.curseforge.com/api/maven/"
+      }
+}
+
+jar {
+    manifest {
+
     }
+
 }
 
 dependencies {
-   //deobfCompile 'com.flemmli97.fatemod:FateUBW:a0.0.0[1.12.2]'
-   //deobfCompile 'com.flemmli97.runecraftory:RuneCraftory:a0.2.0[1.12.2]'
-    //compile 'runecraftory:RuneCraftory-1.12.2:release'
+  compile animania_dep
+  compile mca_dep
+  compile runecraftory_dep
+  compile fate_dep
 }
 
 processResources {
@@ -48,11 +59,11 @@ processResources {
     // replace stuff in mcmod.info, nothing else
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
-                
-        // replace version and mcversion
+
+        // replace all variables from config
         expand 'version':project.version, 'mcversion':project.minecraft.version
     }
-        
+
     // copy everything else except the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
