--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,15 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
+
+# Build props
+modversion=2.3.2
+versionfile=MobBattle.java
+mcversion=1.12.2
+forge_version=14.23.5.2795
+mcp_mapping=snapshot_20171003
+
+animania_dep=animania:animania:1.12.2:1.6.2
+mca_dep=minecraft-comes-alive-mca:MCA-1.12.x:5.3.1:universal
+runecraftory_dep=runecraftory:RuneCraftory:1.12.2:a0.3.0
+fate_dep=the-fate-mod:FateUBW:1.12.2:release
