--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,4 @@ mcp_mapping=snapshot_20171003
 animania_dep=animania:animania:1.12.2:1.6.2
 mca_dep=minecraft-comes-alive-mca:MCA-1.12.x:5.3.1:universal
 runecraftory_dep=runecraftory:RuneCraftory:1.12.2:a0.3.0
-fate_dep=the-fate-mod:FateUBW:1.12.2:release
+fate_dep=the-fate-mod:FateUBW:1.12.2:a0.2.0
