--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
+apply plugin: 'maven-publish'
+
 
 version = "${mcversion}-${modversion}"
 group = "com.flemmli97.mobbattle"
