change to new mappings, made compat for 1.16.1-1.16.2 (and maybe even .3)

--- a/build.gradle
+++ b/build.gradle
@@ -90,6 +90,9 @@ repositories {
         name = "CurseForge"
         url = "https://minecraft.curseforge.com/api/maven/"
     }
+    maven {
+        url 'https://www.dogforce-games.com/maven/'
+    }
 }
 
 dependencies {
