--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,13 +1,21 @@
 modLoader="javafml"
 loaderVersion="[28,)"
+license="All rights reserved"
 issueTrackerURL="https://github.com/Flemmli97/MobBattle/issues"
 displayURL="https://github.com/Flemmli97/MobBattle"
 # logoFile=""
 credits=""
 authors="Flemmli97"
 [[mods]] 
-modId="mobbattle" 
-version="${file.jarVersion}"
-displayName="Mob Battle Mod"
-# updateJSONURL=""
-description='''Creative utensils in creating spectacular mob battles'''
+  modId="mobbattle"
+  version="${file.jarVersion}"
+  displayName="Mob Battle Mod"
+  # updateJSONURL=""
+  authors="Flemmli97"
+  description='''Creative utensils in creating spectacular mob battles'''
+[[dependency.mobbattle]]
+  modId="minecraft"
+  mandatory=true
+  versionRange="[1.16.1,1.16.3]"
+  ordering="NONE"
+  side="BOTH"
