--- a/build.gradle
+++ b/build.gradle
@@ -74,7 +74,7 @@ minecraft {
             // Recommended logging level for the console
             property 'forge.logging.console.level', 'debug'
 
-            args '--mod', 'examplemod', '--all', '--output', file('src/generated/resources/')
+            args '--mod', 'mobbattle', '--all', '--output', file('src/generated/resources/')
 
             mods {
                 mobbattle {
