--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -16,6 +16,6 @@ authors="Flemmli97"
 [[dependencies.mobbattle]]
   modId="minecraft"
   mandatory=true
-  versionRange="[1.16.1,1.16.3]"
+  versionRange="[1.16.2,)"
   ordering="NONE"
   side="BOTH"
