--- a/build.gradle
+++ b/build.gradle
@@ -9,41 +9,33 @@ buildscript {
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
+
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
 version = "${mcversion}-${modversion}"
-group = "com.flemmli97.mobbattle"
-archivesBaseName = "MobBattleMod"
+group = "flemmli97.${modid}"
+archivesBaseName = modid
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
 minecraft {
-    // The mappings can be changed at any time, and must be in the following format.
-    // snapshot_YYYYMMDD   Snapshot are built nightly.
-    // stable_#            Stables are built at the discretion of the MCP team.
-    // Use non-default mappings at your own risk. they may not always work.
-    // Simply re-run your setup task after changing the mappings to update your workspace.
     mappings channel: 'snapshot', version: mcp_mapping
 
-    //makeObfSourceJar = false
-    // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
-
-    // Default run configurations.
-    // These can be tweaked, removed, or duplicated as needed.
     runs {
         client {
             workingDirectory project.file('run')
 
             // Recommended logging data for a userdev environment
-            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+            property 'forge.logging.markers', 'REGISTRIES'
 
             // Recommended logging level for the console
             property 'forge.logging.console.level', 'debug'
-
+            //For linux intellij
+            environment 'PULSE_RUNTIME_PATH', '/run/user/1000/pulse'
             mods {
-                mobbattle {
+                modid {
                     source sourceSets.main
                 }
             }
@@ -59,7 +51,7 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             mods {
-                mobbattle {
+                modid {
                     source sourceSets.main
                 }
             }
@@ -74,10 +66,10 @@ minecraft {
             // Recommended logging level for the console
             property 'forge.logging.console.level', 'debug'
 
-            args '--mod', 'mobbattle', '--all', '--output', file('src/generated/resources/')
+            args '--mod', modid, '--all', '--output', file('src/generated/resources/')
 
             mods {
-                mobbattle {
+                modid {
                     source sourceSets.main
                 }
             }
@@ -86,12 +78,21 @@ minecraft {
 }
 
 repositories {
-    maven {
-        name = "CurseForge"
-        url = "https://minecraft.curseforge.com/api/maven/"
-    }
+    mavenLocal()
     maven {
         url 'https://www.dogforce-games.com/maven/'
+    }
+    maven {
+        name = "CurseMaven"
+        url "https://www.cursemaven.com"
+    }
+    maven {
+        name = "TenshiLib"
+        url "https://gitlab.com/api/v4/projects/21830712/packages/maven"
+    }
+    maven {
+        name = "TenshiLib"
+        url "https://maven.pkg.github.com/flemmli97/TenshiLib"
     }
 }
 
@@ -103,40 +104,46 @@ dependencies {
 
     //compile animania_dep
     //compile mca_dep
-    //compile runecraftory_dep
-    //compile fate_dep
+
+    compile fg.deobf(tenshilib_dep)
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
 jar {
     manifest {
         attributes([
-            "Specification-Title": "mobbattle",
-            "Specification-Vendor": "mobbattle",
+            "Specification-Title": modid,
+            "Specification-Vendor": modid,
             "Specification-Version": "1", // We are version 1 of ourselves
             "Implementation-Title": project.name,
-            "Implementation-Version": "${version}",
-            "Implementation-Vendor" :"mobbattle",
+            "Implementation-Version": version,
+            "Implementation-Vendor" : modid,
             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
 }
 
-// Example configuration to allow publishing using the maven-publish task
-// This is the preferred method to reobfuscate your jar file
-jar.finalizedBy('reobfJar') 
-// However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
-//publish.dependsOn('reobfJar')
+jar.finalizedBy('reobfJar')
 
 publishing {
+    tasks.publish.dependsOn build
     publications {
         mavenJava(MavenPublication) {
             artifact jar
+            groupId group
+            artifactId modid
+            version project.version
         }
     }
     repositories {
         maven {
-            url "file:///${project.projectDir}/mcmodsrepo"
+            url "https://gitlab.com/api/v4/projects/21830712/packages/maven"
+            //url "https://maven.pkg.github.com/flemmli97/MobBattle"
+            credentials {
+                username = project.findProperty("gpr.user") ?: System.getenv("GPR_USER")
+                password = project.findProperty("gpr.gitlab.token") ?: System.getenv("GPR_GITLAB_TOKEN")
+                //password = project.findProperty("gpr.github.token") ?: System.getenv("GPR_TOKEN")
+            }
         }
     }
 }
