--- a/gradle.properties
+++ b/gradle.properties
@@ -4,12 +4,12 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Build props
-modversion=2.3.4
+modid=mobbattle
+modversion=2.3.5
 mcversion=1.16.3
 forge_version=34.1.23
 mcp_mapping=20201028-1.16.3
 
 animania_dep=animania:animania:1.12.2:1.6.2
 mca_dep=minecraft-comes-alive-mca:MCA-1.12.x:5.3.1:universal
-runecraftory_dep=runecraftory:RuneCraftory:1.12.2:a0.3.0
-fate_dep=the-fate-mod:FateUBW:1.12.2:a0.3.0
+tenshilib_dep=flemmli97.tenshilib:tenshilib:1.16.4-1.4.0
