--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -19,3 +19,9 @@ authors="Flemmli97"
   versionRange="[1.16.2,)"
   ordering="NONE"
   side="BOTH"
+[[dependencies.mobbattle]]
+  modId="tenshilib"
+  mandatory=false
+  versionRange="[1.3.1,)"
+  ordering="NONE"
+  side="BOTH"
