--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,4 @@ mcp_mapping=20201028-1.16.3
 
 animania_dep=animania:animania:1.12.2:1.6.2
 mca_dep=minecraft-comes-alive-mca:MCA-1.12.x:5.3.1:universal
-tenshilib_dep=flemmli97.tenshilib:tenshilib:1.16.4-1.4.0
+tenshilib_dep=io.github.flemmli97:tenshilib:1.16.4-1.4.0
