update forge/forgegradle to latest. switch back to pure mcp mappings. add gradle stuff for releases

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,21 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-
 # Build props
 modid=mobbattle
+mod_name=Mob Battle
 modversion=2.3.5
-mcversion=1.16.3
-forge_version=34.1.23
-mcp_mapping=20201028-1.16.3
-
+mcversion=1.16.5
+forge_version=36.1.31
+mcp_mapping=20210309-1.16.5
+# Dependencies
 animania_dep=animania:animania:1.12.2:1.6.2
 mca_dep=minecraft-comes-alive-mca:MCA-1.12.x:5.3.1:universal
 tenshilib_dep=io.github.flemmli97:tenshilib:1.16.4-1.4.0
+# Curse properties
+curse_page=https://www.curseforge.com/minecraft/mc-mods/mob-battle-mod
+curse_versions=1.16.5, Java 8
+curse_id=268746
+curse_dep=
+# Other
+ping_id=852113514692214794
