--- a/gradle.properties
+++ b/gradle.properties
@@ -22,12 +22,12 @@ fabric_version=0.43.1+1.18
 curse_versions=1.18, Java 17
 curse_page_fabric=https://www.curseforge.com/minecraft/mc-mods/mob-battle-mod-fabric
 curse_id_fabric=552316
-curse_dep_fabric=
+curse_dep_fabric=fabric-api
 curse_page_forge=https://www.curseforge.com/minecraft/mc-mods/mob-battle-mod
 curse_id_forge=268746
 curse_dep_forge=
 
 # Other
 project_name=MobBattle
-full_changelog=https://github.com/Flemmli97/Flan/blob/1.18/Changelog.md
+full_changelog=https://github.com/Flemmli97/MobBattle/blob/1.18/Changelog.md
 discord_role=<@&852113514692214794>
