--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -28,6 +28,14 @@ configurations {
     developmentForge.extendsFrom common
 }
 
+repositories {
+    mavenLocal()
+    maven {
+        name = "TenshiLib"
+        url "https://gitlab.com/api/v4/projects/21830712/packages/maven"
+    }
+}
+
 dependencies {
     forge "net.minecraftforge:forge:${rootProject.forge_version}"
     // Remove the next line if you don't want to depend on the API
@@ -35,6 +43,8 @@ dependencies {
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
+
+    // modCompileOnly "io.github.flemmli97:tenshilib:1.18-1.4.0:forge"
 }
 
 processResources {
@@ -55,7 +65,7 @@ shadowJar {
 remapJar {
     input.set shadowJar.archiveFile
     dependsOn shadowJar
-    classifier null
+    classifier "forge"
 }
 
 jar {
@@ -66,6 +76,7 @@ sourcesJar {
     def commonSources = project(":common").sourcesJar
     dependsOn commonSources
     from commonSources.archiveFile.map { zipTree(it) }
+    classifier "forge-sources"
 }
 
 components.java {
