--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,7 @@ archives_base_name=mobbattle
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
 fabric_version=0.43.1+1.18
+tenshilib_version=1.4.0
 
 # Curse properties
 curse_versions=1.18, Java 17
