--- a/gradle.properties
+++ b/gradle.properties
@@ -31,4 +31,4 @@ curse_dep_forge=
 # Other
 project_name=Mob Battle
 full_changelog=https://github.com/Flemmli97/MobBattle/blob/1.18/Changelog.md
-discord_role=<@&852113514692214794>
+discord_role=852113514692214794
