--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@ fabric_version=0.43.1+1.18
 tenshilib_version=1.4.0
 
 # Curse properties
-curse_versions=1.18, Java 17
+curse_versions=1.18, 1.18.1, Java 17
 curse_page_fabric=https://www.curseforge.com/minecraft/mc-mods/mob-battle-mod-fabric
 curse_id_fabric=552316
 curse_dep_fabric=fabric-api
