--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -19,6 +19,6 @@ side="BOTH"
 [[dependencies.mobbattle]]
 modId="tenshilib"
 mandatory=false
-versionRange="[1.4.0,)"
+versionRange="[1.18.1-1.5.0,)"
 ordering="NONE"
 side="BOTH"
