--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.jvmargs=-Xmx2G
 
-minecraft_version=1.18.1
+minecraft_version=1.18.2
 parchment_version=1.18.1:2022.02.13
 
 # Forge Properties
-forge_version=1.18.1-39.0.79
+forge_version=1.18.2-40.0.1
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
@@ -17,11 +17,11 @@ archives_base_name=mobbattle
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.43.1+1.18
+fabric_version=0.47.8+1.18.2
 tenshilib_dep=io.github.flemmli97:tenshilib:1.18.1-1.5.0
 
 # Curse properties
-curse_versions=1.18, 1.18.1, Java 17
+curse_versions=1.18, 1.18.1, 1.18.2, Java 17
 curse_page_fabric=https://www.curseforge.com/minecraft/mc-mods/mob-battle-mod-fabric
 curse_id_fabric=552316
 curse_dep_fabric=fabric-api
