move datagen output to common. also made port item models to datagen version

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -20,6 +20,10 @@ dependencies {
     modCompileOnly "${tenshilib_dep}:fabric"
 }
 
+sourceSets.main.resources {
+    srcDir "src/generated/resources"
+}
+
 publishing {
     publications {
         mavenCommon(MavenPublication) {
