--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -14,10 +14,19 @@ loom {
         }
         launches {
             data {
-                arg "--existing", file("src/main/resources").absolutePath
+                arg "--existing", project(":common").file("src/main/resources").absolutePath
             }
         }
     }
+}
+
+// Make datagen output to common folder
+configureLaunch.doLast {
+    def file = file(".gradle/loom-cache/launch.cfg");
+    def cfg = file.getText('UTF-8')
+    cfg = cfg.replaceAll(project(":forge").file("src/generated/resources").absolutePath,
+            project(":common").file("src/generated/resources").absolutePath)
+    file.write(cfg, 'UTF-8')
 }
 
 configurations {
