--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,12 @@
 org.gradle.jvmargs=-Xmx2G
-
-minecraft_version=1.18.2
-parchment_version=1.18.1:2022.02.13
-
+enabled_platforms=fabric,forge
+minecraft_version=1.19
+parchment_version=1.18.2:2022.06.26
 # Forge Properties
-forge_version=1.18.2-40.0.3
-
+forge_version=1.19-41.1.0
 # Fabric Properties
 # check these on https://fabricmc.net/use
-loader_version=0.13.2
-
+loader_version=0.14.8
 # Mod Properties
 mod_version=2.4.2
 maven_group=io.github.flemmli97
@@ -17,11 +14,11 @@ archives_base_name=mobbattle
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.47.8+1.18.2
-tenshilib_dep=io.github.flemmli97:tenshilib:1.18.1-1.5.0
+fabric_version=0.58.0+1.19
+tenshilib_dep=io.github.flemmli97:tenshilib:1.19-1.6.9
 
 # Curse properties
-curse_versions=1.18, 1.18.1, 1.18.2, Java 17
+curse_versions=1.19, Java 17
 curse_page_fabric=https://www.curseforge.com/minecraft/mc-mods/mob-battle-mod-fabric
 curse_id_fabric=552316
 curse_dep_fabric=fabric-api
@@ -31,5 +28,5 @@ curse_dep_forge=
 
 # Other
 project_name=Mob Battle
-full_changelog=https://github.com/Flemmli97/MobBattle/blob/1.18/Changelog.md
+full_changelog=https://github.com/Flemmli97/MobBattle/blob/1.19/Changelog.md
 discord_role=852113514692214794
