add 1.19 subversion to curse versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ fabric_version=0.58.0+1.19
 tenshilib_dep=io.github.flemmli97:tenshilib:1.19-1.6.9
 
 # Curse properties
-curse_versions=1.19, Java 17
+curse_versions=1.19, 1.19.1, 1.19.2, Java 17
 curse_page_fabric=https://www.curseforge.com/minecraft/mc-mods/mob-battle-mod-fabric
 curse_id_fabric=552316
 curse_dep_fabric=fabric-api
