--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -40,7 +40,6 @@ shadowJar {
 remapJar {
     input.set shadowJar.archiveFile
     dependsOn shadowJar
-    classifier "fabric"
 }
 
 jar {
@@ -51,7 +50,7 @@ sourcesJar {
     def commonSources = project(":common").sourcesJar
     dependsOn commonSources
     from commonSources.archiveFile.map { zipTree(it) }
-    classifier "fabric-sources"
+    classifier "sources"
 }
 
 components.java {
@@ -71,7 +70,7 @@ publishing {
                 builtBy remapSourcesJar
             }
             artifactId project.archives_base_name
-            version project.version
+            version project.version + "-fabric"
         }
     }
 
