--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -62,7 +62,6 @@ shadowJar {
 remapJar {
     input.set shadowJar.archiveFile
     dependsOn shadowJar
-    classifier "forge"
 }
 
 jar {
@@ -73,7 +72,7 @@ sourcesJar {
     def commonSources = project(":common").sourcesJar
     dependsOn commonSources
     from commonSources.archiveFile.map { zipTree(it) }
-    classifier "forge-sources"
+    classifier "sources"
 }
 
 components.java {
@@ -93,7 +92,7 @@ publishing {
                 builtBy remapSourcesJar
             }
             artifactId project.archives_base_name
-            version project.version
+            version project.version + "-forge"
         }
     }
 
