--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -40,6 +40,7 @@ shadowJar {
 remapJar {
     input.set shadowJar.archiveFile
     dependsOn shadowJar
+    classifier "fabric"
 }
 
 jar {
@@ -50,7 +51,7 @@ sourcesJar {
     def commonSources = project(":common").sourcesJar
     dependsOn commonSources
     from commonSources.archiveFile.map { zipTree(it) }
-    classifier "sources"
+    classifier "fabric-sources"
 }
 
 components.java {
@@ -64,9 +65,11 @@ publishing {
         mavenJava(MavenPublication) {
             // add all the jars that should be included when publishing to maven
             artifact(remapJar) {
+                classifier null
                 builtBy remapJar
             }
             artifact(sourcesJar) {
+                classifier "sources"
                 builtBy remapSourcesJar
             }
             artifactId project.archives_base_name
