--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -62,6 +62,7 @@ shadowJar {
 remapJar {
     input.set shadowJar.archiveFile
     dependsOn shadowJar
+    classifier "forge"
 }
 
 jar {
@@ -72,7 +73,7 @@ sourcesJar {
     def commonSources = project(":common").sourcesJar
     dependsOn commonSources
     from commonSources.archiveFile.map { zipTree(it) }
-    classifier "sources"
+    classifier "forge-sources"
 }
 
 components.java {
@@ -86,9 +87,11 @@ publishing {
         mavenJava(MavenPublication) {
             // add all the jars that should be included when publishing to maven
             artifact(remapJar) {
+                classifier null
                 builtBy remapJar
             }
             artifact(sourcesJar) {
+                classifier "sources"
                 builtBy remapSourcesJar
             }
             artifactId project.archives_base_name
