--- a/common/build.gradle
+++ b/common/build.gradle
@@ -17,7 +17,7 @@ repositories {
 }
 
 dependencies {
-    modCompileOnly "${tenshilib_dep}:fabric"
+    modCompileOnly "${tenshilib_dep}-fabric"
 }
 
 sourceSets.main.resources {
