--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 org.gradle.jvmargs=-Xmx2G
 enabled_platforms=fabric,forge
-minecraft_version=1.19.2
-parchment_version=1.19.2:2022.11.27
+minecraft_version=1.19.4
+parchment_version=1.19.3:2023.03.12
 
 # Forge Properties
-forge_version=1.19.2-43.2.3
+forge_version=1.19.4-45.0.22
 # Fabric Properties
-loader_version=0.14.11
+loader_version=0.14.17
 
 # Mod Properties
 mod_version=2.4.3.1
@@ -14,11 +14,11 @@ maven_group=io.github.flemmli97
 archives_base_name=mobbattle
 
 # Dependencies
-fabric_version=0.70.0+1.19.2
-tenshilib_dep=io.github.flemmli97:tenshilib:1.19-1.6.9
+fabric_version=0.76.0+1.19.4
+tenshilib_dep=io.github.flemmli97:tenshilib:1.19.4-1.6.15
 
 # Curse properties
-curse_versions=1.19, 1.19.1, 1.19.2, Java 17
+curse_versions=1.19.4, Java 17
 curse_page_fabric=https://www.curseforge.com/minecraft/mc-mods/mob-battle-mod-fabric
 curse_id_fabric=552316
 curse_dep_fabric=fabric-api
@@ -28,5 +28,5 @@ curse_dep_forge=
 
 # Other
 project_name=Mob Battle
-full_changelog=https://github.com/Flemmli97/MobBattle/blob/1.19/Changelog.md
+full_changelog=https://github.com/Flemmli97/MobBattle/blob/1.19.4/Changelog.md
 discord_role=852113514692214794
