--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -1,24 +1,24 @@
 modLoader="javafml"
-loaderVersion="[41,)"
+loaderVersion="[${loader_version},)"
 license="All rights reserved"
 issueTrackerURL="https://github.com/Flemmli97/MobBattle/issues"
 [[mods]]
 modId="mobbattle"
 version="${version}"
 displayName="Mob Battle Mod"
-displayURL="https://www.curseforge.com/minecraft/mc-mods/mob-battle-mod"
+displayURL="${homepage}"
 logoFile="icon.png"
 authors="Flemmli97"
 description='''Creative utensils in creating spectacular mob battles'''
 [[dependencies.mobbattle]]
 modId="minecraft"
 mandatory=true
-versionRange="[1.19.4,)"
+versionRange="[${mcversion},)"
 ordering="NONE"
 side="BOTH"
 [[dependencies.mobbattle]]
 modId="forge"
 mandatory=true
-versionRange="[41.1.0,)"
+versionRange="[${forge_version},)"
 ordering="NONE"
 side="BOTH"
