--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader="javafml"
-loaderVersion="[40,)"
+loaderVersion="[${loader_version},)"
 license="All rights reserved"
 issueTrackerURL="https://github.com/Flemmli97/MobBattle/issues"
 [[mods]]
@@ -13,7 +13,13 @@ description='''Creative utensils in creating spectacular mob battles'''
 [[dependencies.mobbattle]]
 modId="minecraft"
 mandatory=true
-versionRange="[1.18,)"
+versionRange="[${mcversion},)"
+ordering="NONE"
+side="BOTH"
+[[dependencies.mobbattle]]
+modId="forge"
+mandatory=true
+versionRange="[${forge_version},)"
 ordering="NONE"
 side="BOTH"
 [[dependencies.mobbattle]]
