--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@ archives_base_name=mobbattle
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
 fabric_version=0.47.8+1.18.2
-tenshilib_dep=io.github.flemmli97:tenshilib:1.18.1-1.5.0
+tenshilib_version=1.18.1-1.5.0
 
 # Curse properties
 curse_versions=1.18, 1.18.1, 1.18.2, Java 17
