use unified gradle scripts

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 org.gradle.jvmargs=-Xmx3G
-
+enabled_platforms=fabric,forge
 minecraft_version=1.18.2
 parchment_version=1.18.2:2022.11.06
 
@@ -27,6 +27,11 @@ curse_dep_fabric=fabric-api
 curse_page_forge=https://www.curseforge.com/minecraft/mc-mods/mob-battle-mod
 curse_id_forge=268746
 curse_dep_forge=
+modrinth_versions=1.18.2
+modrinth_page=https://modrinth.com/mod/mob-battle-mod
+modrinth_id=LbrJcAlI
+modrinth_dep_fabric=fabric-api
+modrinth_dep_forge=
 
 # Other
 project_name=Mob Battle
