--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -1,11 +1,9 @@
-plugins {
-    id "com.github.johnrengelman.shadow" version "7.1.0"
+ext {
+    shadow_dep = [group: "com.github.johnrengelman.shadow", name: "com.github.johnrengelman.shadow.gradle.plugin", version: "7.1.0"]
 }
 
-architectury {
-    platformSetupLoomIde()
-    forge()
-}
+apply from: "https://raw.githubusercontent.com/Flemmli97/GradleScripts/mc-architectury-1.2/forge.gradle"
+
 
 loom {
     forge {
@@ -27,89 +25,4 @@ configureLaunch.doLast {
     cfg = cfg.replaceAll(project(":forge").file("src/generated/resources").absolutePath,
             project(":common").file("src/generated/resources").absolutePath)
     file.write(cfg, 'UTF-8')
-}
-
-configurations {
-    common
-    shadowCommon // Don't use shadow from the shadow plugin because we don't want IDEA to index this.
-    compileClasspath.extendsFrom common
-    runtimeClasspath.extendsFrom common
-    developmentForge.extendsFrom common
-}
-
-dependencies {
-    forge "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
-
-    common(project(path: ":common", configuration: "namedElements")) { transitive false }
-    shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
-}
-
-processResources {
-    inputs.property "version", project.version
-
-    def loader_version = (forge_version =~ /([0-9]+)\.([0-9]+)\.([0-9]+)/)[0][1]
-    filesMatching("META-INF/mods.toml") {
-        expand "version": project.version, "loader_version": loader_version, "homepage": curse_page_forge, 
-                "mcversion": minecraft_version, "forge_version": forge_version
-    }
-}
-
-shadowJar {
-    exclude "fabric.mod.json"
-
-    configurations = [project.configurations.shadowCommon]
-    classifier "dev-shadow"
-}
-
-remapJar {
-    input.set shadowJar.archiveFile
-    dependsOn shadowJar
-    classifier "forge"
-}
-
-jar {
-    classifier "dev"
-}
-
-sourcesJar {
-    def commonSources = project(":common").sourcesJar
-    dependsOn commonSources
-    from commonSources.archiveFile.map { zipTree(it) }
-    classifier "forge-sources"
-}
-
-components.java {
-    withVariantsFromConfiguration(project.configurations.shadowRuntimeElements) {
-        skip()
-    }
-}
-
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            // add all the jars that should be included when publishing to maven
-            artifact(remapJar) {
-                classifier null
-                builtBy remapJar
-            }
-            artifact(sourcesJar) {
-                classifier "sources"
-                builtBy remapSourcesJar
-            }
-            artifactId project.archives_base_name
-            version project.version + "-forge"
-        }
-    }
-
-    repositories {
-        maven {
-            url "https://gitlab.com/api/v4/projects/21830712/packages/maven"
-            //url "https://maven.pkg.github.com/flemmli97/<>"
-            credentials {
-                username = project.findProperty("gpr.user") ?: System.getenv("GPR_USER")
-                password = project.findProperty("gpr.gitlab.token") ?: System.getenv("GPR_GITLAB_TOKEN")
-                //password = project.findProperty("gpr.github.token") ?: System.getenv("GPR_TOKEN")
-            }
-        }
-    }
 }
