--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
-org.gradle.jvmargs=-Xmx2G
+org.gradle.jvmargs=-Xmx3G
 enabled_platforms=fabric,forge
-minecraft_version=1.19.4
-parchment_version=1.19.3:2023.03.12
+minecraft_version=1.20.1
+parchment_version=1.20.1:2023.07.09
 
 # Forge Properties
-forge_version=45.0.59
+forge_version=47.1.3
 # Fabric Properties
-loader_version=0.14.17
+loader_version=0.14.21
 
 # Mod Properties
 mod_version=2.4.4
@@ -14,19 +14,24 @@ maven_group=io.github.flemmli97
 archives_base_name=mobbattle
 
 # Dependencies
-fabric_version=0.76.0+1.19.4
-tenshilib_dep=io.github.flemmli97:tenshilib:1.19.4-1.6.15
+fabric_version=0.85.0+1.20.1
+tenshilib_dep=io.github.flemmli97:tenshilib:1.20.1-1.6.16
 
 # Curse properties
-curse_versions=1.19.4, Java 17
+curse_versions=1.20.1, Java 17
 curse_page_fabric=https://www.curseforge.com/minecraft/mc-mods/mob-battle-mod-fabric
 curse_id_fabric=552316
 curse_dep_fabric=fabric-api
 curse_page_forge=https://www.curseforge.com/minecraft/mc-mods/mob-battle-mod
 curse_id_forge=268746
 curse_dep_forge=
+modrinth_versions=1.20.1
+modrinth_page=https://modrinth.com/mod/mob-battle-mod
+modrinth_id=LbrJcAlI
+modrinth_dep_fabric=fabric-api
+modrinth_dep_forge=
 
 # Other
 project_name=Mob Battle
-full_changelog=https://github.com/Flemmli97/MobBattle/blob/1.19.4/Changelog.md
+full_changelog=https://github.com/Flemmli97/MobBattle/blob/1.20.1/Changelog.md
 discord_role=852113514692214794
