--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,12 +1,4 @@
-dependencies {
-    // We depend on fabric loader here to use the fabric @Environment annotations and get the mixin dependencies
-    // Do NOT use other classes from fabric loader
-    modImplementation "net.fabricmc:fabric-loader:${rootProject.loader_version}"
-}
-
-architectury {
-    common(rootProject.enabled_platforms.split(","))
-}
+apply from: "https://raw.githubusercontent.com/Flemmli97/GradleScripts/mc-architectury-1.2/common.gradle"
 
 repositories {
     mavenLocal()
@@ -22,22 +14,4 @@ dependencies {
 
 sourceSets.main.resources {
     srcDir "src/generated/resources"
-}
-
-processResources {
-    exclude '.cache'
-}
-
-publishing {
-    publications {
-        mavenCommon(MavenPublication) {
-            artifactId = rootProject.archives_base_name
-            from components.java
-        }
-    }
-
-    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
-    repositories {
-        // Add repositories to publish to here.
-    }
 }
