use unified gradle scripts

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ archives_base_name=mobbattle
 
 # Dependencies
 fabric_version=0.76.0+1.19.4
-tenshilib_dep=io.github.flemmli97:tenshilib:1.19.4-1.6.15
+tenshilib_version=1.19.4-1.6.15
 
 # Curse properties
 curse_versions=1.19.4, Java 17
@@ -25,6 +25,11 @@ curse_dep_fabric=fabric-api
 curse_page_forge=https://www.curseforge.com/minecraft/mc-mods/mob-battle-mod
 curse_id_forge=268746
 curse_dep_forge=
+modrinth_versions=1.19.4
+modrinth_page=https://modrinth.com/mod/mob-battle-mod
+modrinth_id=LbrJcAlI
+modrinth_dep_fabric=fabric-api
+modrinth_dep_forge=
 
 # Other
 project_name=Mob Battle
