update tenshilib dep

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -9,7 +9,7 @@ repositories {
 }
 
 dependencies {
-    modCompileOnly "io.github.flemmli97:tenshilib:${tenshilib_version}:fabric"
+    modCompileOnly "io.github.flemmli97:tenshilib:${tenshilib_version}-fabric"
 }
 
 sourceSets.main.resources {
